# Expression

./: CMakeLists.txt  代码说明.txt
include/: check.h  common.h  expressionEvaluation.h  mystring.h  sequentialStack.h  variable.h  variableCollection.h
src/: check.c  expressionEvaluation.c  expressionEvaluation.h  main.c  mystring.c  sequentialStack.c  variable.c  variableCollection.c
